--- a/detail.html
+++ b/detail.html
@@ -8,8 +8,8 @@
     <title>手机详情页！</title>
     <meta name="description"
         content="拼刀刀PDD.COM-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!">
-    <meta name="keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,拼刀刀"">
-        <!-- 引入favicon.ico网页图标 -->
+    <meta name="keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,拼刀刀">
+    <!-- 引入favicon.ico网页图标 -->
     <link rel=" shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- 引入css 初始化的css文件 -->
     <link rel="stylesheet" href="css/base.css">
