--- a/shopcar.html
+++ b/shopcar.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>我的购物车-品优购</title>
+    <title>我的购物</title>
     <meta name="description"
-        content="品优购JD.COM-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!" />
-    <meta name="Keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,品优购" />
+        content="拼刀刀JD.COM-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!" />
+    <meta name="Keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,拼刀刀" />
     <!-- 引入facicon.ico网页图标 -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- 引入css 初始化的css 文件 -->
